tests/error/misc_errors/entrypoint_with_args.py
from guppylang.decorator import guppy

@guppy
def foo(x: bool) -> bool:
    return x


foo.compile()