tests/error/misc_errors/entrypoint_with_args.err
Error: Entrypoint function has arguments (at $FILE:4:8)
  | 
2 | 
3 | @guppy
4 | def foo(x: bool) -> bool:
  |         ^^^^^^^ Entrypoint function has arguments: `x`.

Guppy compilation failed due to 1 previous error
